{
    "name": "CameraMovementInput",
    "maps": [
        {
            "name": "KeyboardMove",
            "id": "5d979b0f-2791-4a71-9c1d-b0fb81065c53",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "dce118f5-5592-45dc-8b37-ac35feb3dc1a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "1ad4c1db-f881-4312-b2df-752875573eee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "1264696a-186d-4e21-8e40-cf4d1b5f62e9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ca5c27c1-9624-4c29-a5c7-c033e3d4c2ce",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e1cbfd78-aa8c-45a8-bc22-17852144fb8e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "dcbc9583-b349-4e55-aa71-454381871e7e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "384d544d-045c-49b7-9f69-4d41fd642a1c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a7ad9ab3-b61e-4ec5-8106-db08e285be86",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MouseMove",
            "id": "206d65c2-c838-4f1c-b960-7e0a0f2d54e6",
            "actions": [
                {
                    "name": "Delta",
                    "type": "Value",
                    "id": "685f9651-d1f6-4a0e-a2c8-1f5c19f70432",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2,ScaleVector2(x=0.5,y=0.5)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55383825-7560-4322-b9cc-8023be5520cb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InputMapSwitch",
            "id": "2ce00855-45fc-4225-aa13-d6753e354894",
            "actions": [
                {
                    "name": "ChangeMoveActionMap",
                    "type": "Button",
                    "id": "32423ef6-4e07-4129-b638-3a896cdfb315",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeRotateActionMap",
                    "type": "Button",
                    "id": "4cc745ac-9a06-44b6-9f79-a8d69f592e5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "009d29f4-6a99-4c09-aaa6-4aa42e718f3a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMoveActionMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "894c4e56-645d-48ae-be10-cce044d97e70",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeRotateActionMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyboardRotate",
            "id": "212f1316-f054-4a61-9e26-d05def788c87",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "a520ad97-6ae1-41d6-83a0-66ad5c2a251c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "804d519d-06db-4ea0-b931-ec2738e77690",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3caf32c2-0591-4c35-86f4-a1ed82cbd444",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2338d765-b3cb-4e96-aafb-6482cd4cd5c8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MouseRotate",
            "id": "361c5e3d-913c-4350-844e-b08bc1ab5d11",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "eb85a1c7-2375-450b-92fb-d63b80ee8df4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c157f105-c314-440d-8a24-1eaca42d0374",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa3c16e1-f9a3-4b30-8497-23e7b092f804",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}